Arreglos segun entrega

--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -14,10 +14,11 @@
 <body>
 
     <header>
+        <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
+                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,10 +46,11 @@
                 </div>
             </div>
         </nav>
+    </section>
     </header>
 
     <main>
-        <div class="row align-items-center">
+        <section class="row align-items-center">
             <div class="col-lg-6 text-center mt-2 mb-2 center-block">
                 <h2>Diseño Arquitectónico</h2>
                 <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
@@ -100,11 +102,11 @@
                 <img src="../Imagenes/Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica">
             </div>
 
-        </div>
+        </section>
     </main>
 
     <footer>
-        <div class="container-fluid">
+        <section class="container-fluid">
             <div class="row justify-content-center">
 
                 <div class="col-lg-2 text-center">
@@ -120,7 +122,8 @@
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                    <h3>¿Donde estamos?</h3>
+                    <h3>Calle falsa 456</h3>
                 </div>
 
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
@@ -145,7 +148,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
