--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -14,10 +14,11 @@
 <body>
 
     <header>
+        <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
+                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,10 +46,11 @@
                 </div>
             </div>
         </nav>
+    </section>
     </header>
 
     <main>
-        <div class="justify-content-center">
+        <section class="justify-content-center">
             <div class="mt-2 mb-2">
                 <h1 class="text-center">¿Donde estamos?</h1>
                 <div class="mapaInput">
@@ -60,11 +62,11 @@
                 </div>
             </div>
             <div class="mt-2 mb-2">
-                <h1 class="text-center">Dejanos tu consulta</h1>
+                <h2 class="text-center">Dejanos tu consulta</h2>
                 <div>
                     <div class="row">
                         <div class="col-lg-12" data-aos="fade-up">
-                            <form>
+                            <form class="formContact">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <label for="name">Nombre y Apellido</label>
@@ -83,7 +85,7 @@
                                         <textarea class="form-control" placeholder="Escrba aquí su mensaje" name="message" cols="30" rows="5"
                                             required></textarea>
                                     </div>
-                                    <div class="col-lg-12 mt-2">
+                                    <div class="col-lg-12 mt-4 mb-4">
                                         <input type="submit" class="d-block w-100" value="Enviar mensaje">
                                     </div>
                                 </div>
@@ -95,11 +97,11 @@
                 </div>
             </div>
 
-        </div>
+        </section>
     </main>
 
     <footer>
-        <div class="container-fluid">
+        <section class="container-fluid">
             <div class="row justify-content-center">
 
                 <div class="col-lg-2 text-center">
@@ -115,7 +117,8 @@
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                    <h3>¿Donde estamos?</h3>
+                    <h3>Calle falsa 456</h3>
                 </div>
 
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
@@ -140,7 +143,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
