--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -14,10 +14,11 @@
 <body>
 
     <header>
+        <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
+                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,10 +46,11 @@
                 </div>
             </div>
         </nav>
+    </section>
     </header>
 
     <main>
-        <div class="row justify-content-center align-items-center">
+        <section class="row justify-content-center align-items-center">
             <h1 class="text-center">Viviendas</h1>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
@@ -89,11 +91,11 @@
                 <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenes" alt="Imagen de un teatro">
             </div>
 
-        </div>
+        </section>
     </main>
 
     <footer>
-        <div class="container-fluid">
+        <section class="container-fluid">
             <div class="row justify-content-center">
 
                 <div class="col-lg-2 text-center">
@@ -109,7 +111,8 @@
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                    <h3>¿Donde estamos?</h3>
+                    <h3>Calle falsa 456</h3>
                 </div>
                 
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
@@ -135,7 +138,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
