--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -14,10 +14,11 @@
 <body>
 
     <header>
+        <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
+                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,10 +46,11 @@
                 </div>
             </div>
         </nav>
+    </section>
     </header>
 
     <main class="cuerpoSobreNosotros">
-        <div class="row">
+        <section class="row">
             <div class="justify-content-center align-items-center text-center">
                 <h1 class="mt-3">¿Quienes somos?</h1>
                 <p class="textoDescriptivo">Somos un equipo compuesto enteramente por profesionales especializados en el
@@ -64,7 +66,7 @@
                 <img class="d-block w-100" src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen">
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <h1 class="mt-3">¿Que ofrecemos?</h1>
+                <h2 class="mt-3">¿Que ofrecemos?</h2>
                 <p class="textoDescriptivo">Sabemos que en todo desafio que encaramos encontraremos dificultades pero
                     estaremos ahi cuando aparezcan.
                     Traajando codo a codo para hacer de cada proyecto una obra unica.Trabajamos integralmente todas
@@ -79,11 +81,11 @@
                     y la importancia de la iluminacion natural y artificail y el diseño grafico y señaletica cuando el
                     proyecto lo requiera</p>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
-        <div class="container-fluid">
+        <section class="container-fluid">
             <div class="row justify-content-center">
 
                 <div class="col-lg-2 text-center">
@@ -99,7 +101,8 @@
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                    <h3>¿Donde estamos?</h3>
+                    <h3>Calle falsa 456</h3>
                 </div>
 
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
@@ -124,7 +127,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
