--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div>
-
-        <header>
+    <header>
+        <section>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <a class="navbar-brand" href="./index.html"><img class="logoLicen" src="./Imagenes/Logo.jpg"
+                            alt="Logo Desarrollos Licen"></a>
+                    <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,16 @@
                                     <a class="nav-link" aria-current="page" href="#">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="./Paginas/SobreNosotros.html">Sobre Nosotros</a>
+                                    <a class="nav-link" aria-current="page" href="./Paginas/SobreNosotros.html">Sobre
+                                        Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="./Paginas/Proyectos.html">Proyectos</a>
+                                    <a class="nav-link" aria-current="page"
+                                        href="./Paginas/Proyectos.html">Proyectos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="./Paginas/Servicios.html">Servicios</a>
+                                    <a class="nav-link" aria-current="page"
+                                        href="./Paginas/Servicios.html">Servicios</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="./Paginas/Contacto.html">Contacto</a>
@@ -46,91 +49,93 @@
                     </div>
                 </div>
             </nav>
-        </header>
+        </section>
+    </header>
 
-        <main>
-            <div class="" data-aos="zoom-in" data-aos-delay="100">
-                <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+    <main>
+        <section class="MarginGral" data-aos="zoom-in" data-aos-delay="100">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <h1 class="text-center mt-2 mb-2 "> Hacemos realidad tus ideas</h1>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
+                            alt="Render de una ciudad">
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
-                                alt="Render ciudad">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de Casa">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100"
-                                alt="Render recepcion de Clinica">
-                        </div>
+                    <div class="carousel-item">
+                        <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de una Casa">
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100"
+                            alt="Render  de una recepcion de una Clinica">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon iconArrow" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon iconArrow" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <h2 class="text-center mt-2 mb-2">Conócenos</h2>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section class="container-fluid">
+            <div class="row justify-content-center">
+
+                <div class="col-lg-2 text-center">
+                    <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+                </div>
+
+                <div class="col-lg-4 text-center textoPiePaginas">
+                    <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
+                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
+                        40.0000m2 de envergadura
+                    </p>
+                </div>
+
+                <div class="col-lg-2 text-center infoAdicional">
+                    <h3>¿Donde estamos?</h3>
+                    <h3>Calle falsa 456</h3>
+                </div>
+
+                <div class="col-lg-2 row text-center align-items-center enlacesRedes">
+                    <div>
+                        <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
+                            rel="noopener noreferrer">
+                            <iconify-icon icon="devicon:facebook"></iconify-icon>
+                        </a>
+                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+                        </a>
+                        <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
+                            rel="noopener noreferrer">
+                            <iconify-icon icon="devicon:linkedin"></iconify-icon>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 text-center align-items-center enlacesRedes2">
+                    <a href="./Paginas/Contacto.html">Unete al equipo</a>
+                    <a href="./Paginas/Contacto.html">Contacto</a>
                 </div>
             </div>
-        </main>
-
-         <footer>
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-
-                    <div class="col-lg-2 text-center">
-                        <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-                    </div>
-
-                    <div class="col-lg-4 text-center textoPiePaginas">
-                        <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                            Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                            Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                            40.0000m2 de envergadura
-                        </p>
-                    </div>
-
-                    <div class="col-lg-2 text-center infoAdicional">
-                        <h2>¿Donde estamos?<br />Calle falsa 456</h2>
-                    </div>
-                    
-                    <div class="col-lg-2 row text-center align-items-center enlacesRedes">
-                        <div>
-                            <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
-                                rel="noopener noreferrer">
-                                <iconify-icon icon="devicon:facebook"></iconify-icon>
-                            </a>
-                            <a class="col-lg-4" href="http://www.instagram.com/" target="_blank"
-                                rel="noopener noreferrer">
-                                <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-                            </a>
-                            <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
-                                rel="noopener noreferrer">
-                                <iconify-icon icon="devicon:linkedin"></iconify-icon>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                        <a href="./Paginas/Contacto.html">Unete al equipo</a><br />
-                        <a href="./Paginas/Contacto.html">Contacto</a>
-                    </div>
-
-                </div>
-            </div>
-        </footer>
+        </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
