Anteultimos arreglos de la correccion

--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -138,8 +138,10 @@
                 </div>
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                    <a href="#">Unete al equipo</a><br />
-                    <a href="#">Contacto</a>
+                    <div class="enlaceRedes3">
+                        <a href="#">Unete al equipo</a>
+                        <a href="#">Contacto</a>
+                    </div>
                 </div>
 
             </div>
