--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -52,7 +52,7 @@
     <main>
         <section class="row align-items-center">
             <div class="col-lg-6 text-center mt-2 mb-2 center-block">
-                <h2>Diseño Arquitectónico</h2>
+                <h1>Diseño Arquitectónico</h1>
                 <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
                     proyecto arquitectonico que
                     cumpla con todas las necesidades de funcionalidad teniendo en cuenta los usos de los ambientes, las
@@ -143,8 +143,10 @@
                 </div>
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                    <a href="./Contacto.html">Unete al equipo</a><br />
-                    <a href="./Contacto.html">Contacto</a>
+                    <div class="enlaceRedes3">
+                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Contacto</a>
+                    </div>
                 </div>
 
             </div>
