--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -122,8 +122,10 @@
                 </div>
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                    <a href="./Contacto.html">Unete al equipo</a><br />
-                    <a href="./Contacto.html">Contacto</a>
+                    <div class="enlaceRedes3">
+                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Contacto</a>
+                    </div>
                 </div>
 
             </div>
