--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -59,7 +59,7 @@
                 <img src="../Imagenes/Vivienda PH.jpg" class="imagenes" alt="Imagen de un edificio PH">
             </div>
 
-            <h1 class="text-center">Clinicas</h1>
+            <h2 class="text-center">Clinicas</h2>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica">
             </div>
@@ -67,7 +67,7 @@
                 <img src="../Imagenes/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica">
             </div>
 
-            <h1 class="text-center">Gastronomia</h1>
+            <h2 class="text-center">Gastronomia</h2>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenes" alt="Imagen de una local gastronomico">
             </div>
@@ -75,7 +75,7 @@
                 <img src="../Imagenes/Local Gastr 2.jpg" class="imagenes" alt="Imagen de un patio de comidas">
             </div>
 
-            <h1 class="text-center">Hoteleria y entretenimiento</h1>
+            <h2 class="text-center">Hoteleria y entretenimiento</h2>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
@@ -83,7 +83,7 @@
                 <img src="../Imagenes/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
 
-            <h1 class="text-center">Predios</h1>
+            <h2 class="text-center">Predios</h2>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Gym 1.jpg" class="imagenes" alt="Imagen de un gimnasio">
             </div>
@@ -133,8 +133,10 @@
                 </div>
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                    <a href="./Contacto.html">Unete al equipo</a><br />
-                    <a href="./Contacto.html">Contacto</a>
+                    <div class="enlaceRedes3">
+                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Contacto</a>
+                    </div>
                 </div>
 
             </div>
