--- a/index.html
+++ b/index.html
@@ -55,15 +55,8 @@
     <main>
         <section class="MarginGral" data-aos="zoom-in" data-aos-delay="100">
             <div id="carouselExampleIndicators" class="carousel slide">
-                <h1 class="text-center mt-2 mb-2 "> Hacemos realidad tus ideas</h1>
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
+                <h1 class="text-center mb-4 ">Hacemos realidad tus ideas</h1>
+              
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
@@ -87,7 +80,7 @@
                     <span class="carousel-control-next-icon iconArrow" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-                <h2 class="text-center mt-2 mb-2">Conócenos</h2>
+                <h2 class="text-center mt-4 mb-2">Conócenos</h2>
             </div>
         </section>
     </main>
@@ -130,9 +123,12 @@
                 </div>
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
-                    <a href="./Paginas/Contacto.html">Unete al equipo</a>
-                    <a href="./Paginas/Contacto.html">Contacto</a>
+                    <div class="enlaceRedes3">
+                        <a href="./Paginas/Contacto.html">Unete al equipo</a>
+                        <a href="./Paginas/Contacto.html">Contacto</a>
+                    </div>
                 </div>
+                
             </div>
         </section>
     </footer>
