--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -56,39 +56,39 @@
                 <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Vivienda PH.jpg" class="imagenes" alt="Imagen de un edificio PH">
+                <img src="../Imagenes/Imagenes actualizdas/Vivienda ph.jpg" class="imagenes" alt="Imagen de un edificio PH">
             </div>
 
             <h2 class="text-center">Clinicas</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica">
+                <img src="../Imagenes/Imagenes actualizdas/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica">
+                <img src="../Imagenes/Imagenes actualizdas/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica">
             </div>
 
             <h2 class="text-center">Gastronomia</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenes" alt="Imagen de una local gastronomico">
+                <img src="../Imagenes/Imagenes actualizdas/local gastro.jpg" class="imagenes" alt="Imagen de una local gastronomico">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Local Gastr 2.jpg" class="imagenes" alt="Imagen de un patio de comidas">
+                <img src="../Imagenes/Imagenes actualizdas/patio comidas.jpg" class="imagenes" alt="Imagen de un patio de comidas">
             </div>
 
             <h2 class="text-center">Hoteleria y entretenimiento</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
+                <img src="../Imagenes/Imagenes actualizdas/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
+                <img src="../Imagenes/Imagenes actualizdas/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
 
             <h2 class="text-center">Predios</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Gym 1.jpg" class="imagenes" alt="Imagen de un gimnasio">
+                <img src="../Imagenes/Imagenes actualizdas/gym 3.jpg" class="imagenes" alt="Imagen de un gimnasio">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenes" alt="Imagen de un teatro">
+                <img src="../Imagenes/Imagenes actualizdas/Entretenimiento.jpg" class="imagenes" alt="Imagen de un teatro">
             </div>
 
         </section>
