--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -51,7 +51,7 @@
 
     <main>
         <section class="row justify-content-center align-items-center">
-            <h1 class="text-center">Viviendas</h1>
+            <h1 class="text-center mt-3">Viviendas</h1>
             <div class="col-lg-6 mt-2 mb-2">
                 <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
