--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -52,7 +52,7 @@
     <main class="cuerpoSobreNosotros">
         <section class="row">
             <div class="justify-content-center align-items-center text-center">
-                <h1 class="mt-3">¿Quienes somos?</h1>
+                <h1 class="text-center mt-3">¿Quienes Somos?</h1>
                 <p class="textoDescriptivo">Somos un equipo compuesto enteramente por profesionales especializados en el
                     desarrollo de proyectos
                     y ejecución de obras. Nuestro departamento de Arquitectura posee una vasta experiencia en el diseño
