--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="MarginGral" data-aos="zoom-in" data-aos-delay="100">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <h1 class="text-center mb-4 ">Hacemos realidad tus ideas</h1>
-              
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
@@ -80,7 +80,9 @@
                     <span class="carousel-control-next-icon iconArrow" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-                <h2 class="text-center mt-4 mb-2">Conócenos</h2>
+                <a class="Conocenos" href="./Paginas/SobreNosotros.html">
+                    <h2 class="text-center mt-4 mb-2">Conócenos</h2>
+                </a>
             </div>
         </section>
     </main>
@@ -128,7 +130,7 @@
                         <a href="./Paginas/Contacto.html">Contacto</a>
                     </div>
                 </div>
-                
+
             </div>
         </section>
     </footer>
