Arme parcials y cambie rutas de css al scss

--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Imagenes/Favicon.2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../Estilos/estilos.css">
+    <link rel="stylesheet" href="../Estilos/styles.css">
 </head>
 
 <body>
@@ -86,7 +86,7 @@
                                             required></textarea>
                                     </div>
                                     <div class="col-lg-12 mt-4 mb-4">
-                                        <input type="submit" class="d-block w-100" value="Enviar mensaje">
+                                        <input type="submit" class="d-block w-100 buttonEnviar" value="Enviar mensaje">
                                     </div>
                                 </div>
 
