--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Imagenes/Favicon.2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../Estilos/estilos.css">
+    <link rel="stylesheet" href="../Estilos/styles.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
 
     <main>
         <section class="row align-items-center">
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h1>Diseño Arquitectónico</h1>
                 <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
                     proyecto arquitectonico que
@@ -64,7 +64,7 @@
                 <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Proyecto de Iluminación</h2>
                 <p class="textoDescriptivo">Trabajamos en equipo con estudios de iluminacion especificos para cada
                     proyecto brindando el detalle
@@ -75,7 +75,7 @@
                 <img src="../Imagenes/Proyecto de iluminacion.jpg" class="imagenes" alt="Render de ilumninacion">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Decoracion y estilo</h2>
                 <p class="textoDescriptivo">Parte de nuestro staff se dedica exclusivamente a aportar ideas moderanas y
                     decorativas en conjunto
@@ -88,7 +88,7 @@
                 <img src="../Imagenes/Diseño Interior.jpg" class="imagenes" alt="Render de Diseño de interiores">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Diseño grafico y señaletica</h2>
                 <p class="textoDescriptivo">Muchos de nuestros proyectos requieren un aporte desde el diseño grafico.
                     Esta parte del diseño no
