--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Imagenes/Favicon.2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./Estilos/estilos.css">
+    <link rel="stylesheet" href="./Estilos/styles.css">
 </head>
 
 <body>
