Meti Sass en footer, gral, header, contactos e index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
                 <a class="Conocenos" href="./Paginas/SobreNosotros.html">
-                    <h2 class="text-center mt-4 mb-2 Conocenos">Conócenos</h2>
+                    <h2 class="text-center mt-4 mb-2">Conócenos</h2>
                 </a>
             </div>
         </section>
