Meti animaciones y seo

--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora la versatilidad de nuestros proyectos de construcción. Desde residenciales hasta comerciales, damos vida a tus ideas con calidad y experiencia líder en el sector.">
+    <meta name="keywords" content="Viviendas, Hoteleria, Deportes, Gastronomia, Comercial, Proyectos, Construccion, Arquitectura">
     <title>Licen - Proyectos</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Imagenes/Favicon.2.jpg" type="image/x-icon">
@@ -56,39 +59,39 @@
                 <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Vivienda ph.jpg" class="imagenes" alt="Imagen de un edificio PH">
+                <img src="../Imagenes/Imagenes actualizdas/Vivienda ph.jpg" class="imagenes" alt="Imagen de un edificio PH" loading="lazy">
             </div>
 
             <h2 class="text-center">Clinicas</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica">
+                <img src="../Imagenes/Imagenes actualizdas/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica">
+                <img src="../Imagenes/Imagenes actualizdas/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica" loading="lazy">
             </div>
 
             <h2 class="text-center">Gastronomia</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/local gastro.jpg" class="imagenes" alt="Imagen de una local gastronomico">
+                <img src="../Imagenes/Imagenes actualizdas/local gastro.jpg" class="imagenes" alt="Imagen de una local gastronomico" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/patio comidas.jpg" class="imagenes" alt="Imagen de un patio de comidas">
+                <img src="../Imagenes/Imagenes actualizdas/patio comidas.jpg" class="imagenes" alt="Imagen de un patio de comidas" loading="lazy">
             </div>
 
             <h2 class="text-center">Hoteleria y entretenimiento</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
+                <img src="../Imagenes/Imagenes actualizdas/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
+                <img src="../Imagenes/Imagenes actualizdas/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
             </div>
 
             <h2 class="text-center">Predios</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/gym 3.jpg" class="imagenes" alt="Imagen de un gimnasio">
+                <img src="../Imagenes/Imagenes actualizdas/gym 3.jpg" class="imagenes" alt="Imagen de un gimnasio" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Entretenimiento.jpg" class="imagenes" alt="Imagen de un teatro">
+                <img src="../Imagenes/Imagenes actualizdas/Entretenimiento.jpg" class="imagenes" alt="Imagen de un teatro" loading="lazy">
             </div>
 
         </section>
@@ -149,6 +152,10 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
 </body>
 
