--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra tu socio de confianza en construcción. Contacta con nosotros para proyectos personalizados. Estamos aquí para ti, donde sea que estés. ¡Construyamos juntos el futuro!">
+    <meta name="keywords" content="Concato, telefono, oficina, mail, direccion, atencio personalizada, mejores profesionales">
     <title>Licen - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
