--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Transformamos visiones en realidad. Nuestra constructora ofrece servicios diversos con una filosofía de excelencia. Descubre cómo hacemos de cada proyecto una obra maestra">
+    <meta name="keywords" content="Diseño, Arquitectura, Iluminacion, Interiorismo, Grafica, Proyetos">
     <title>Licen - Servicios</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Imagenes/Favicon.2.jpg" type="image/x-icon">
@@ -51,7 +54,7 @@
 
     <main>
         <section class="row align-items-center">
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h1>Diseño Arquitectónico</h1>
                 <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
                     proyecto arquitectonico que
@@ -61,10 +64,10 @@
                 </p>
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura">
+                <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura" loading="lazy">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Proyecto de Iluminación</h2>
                 <p class="textoDescriptivo">Trabajamos en equipo con estudios de iluminacion especificos para cada
                     proyecto brindando el detalle
@@ -72,10 +75,10 @@
                     confort para los usuarios.</p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Proyecto de iluminacion.jpg" class="imagenes" alt="Render de ilumninacion">
+                <img src="../Imagenes/Proyecto de iluminacion.jpg" class="imagenes" alt="Render de ilumninacion" loading="lazy">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Decoracion y estilo</h2>
                 <p class="textoDescriptivo">Parte de nuestro staff se dedica exclusivamente a aportar ideas moderanas y
                     decorativas en conjunto
@@ -85,10 +88,10 @@
                 </p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Diseño Interior.jpg" class="imagenes" alt="Render de Diseño de interiores">
+                <img src="../Imagenes/Diseño Interior.jpg" class="imagenes" alt="Render de Diseño de interiores" loading="lazy">
             </div>
 
-            <div class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Diseño grafico y señaletica</h2>
                 <p class="textoDescriptivo">Muchos de nuestros proyectos requieren un aporte desde el diseño grafico.
                     Esta parte del diseño no
@@ -99,7 +102,7 @@
                 </p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica">
+                <img src="../Imagenes/Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica" loading="lazy">
             </div>
 
         </section>
@@ -159,6 +162,10 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
