--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Constructora en ascenso: Superamos desafíos desde el inicio. ¡Descubre nuestra pasión por la construcción de un futuro sólido y prometedor!">
+    <meta name="keywords" content="Conocenos, Nosotros, Unite al equipo">
     <title>Licen - Sobre Nosotros</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Imagenes/Favicon.2.jpg" type="image/x-icon">
@@ -51,7 +54,7 @@
 
     <main class="cuerpoSobreNosotros">
         <section class="row">
-            <div class="justify-content-center align-items-center text-center">
+            <div data-aos="fade-right" data-aos-delay="50" class="justify-content-center align-items-center text-center">
                 <h1 class="text-center mt-3">¿Quienes Somos?</h1>
                 <p class="textoDescriptivo">Somos un equipo compuesto enteramente por profesionales especializados en el
                     desarrollo de proyectos
@@ -63,9 +66,9 @@
                     creativos y de alta calidad.</p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <img class="d-block w-100" src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen">
+                <img class="d-block w-100" src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen" loading="lazy">
             </div>
-            <div class="justify-content-center align-items-center text-center">
+            <div data-aos="fade-left" data-aos-delay="50" class="justify-content-center align-items-center text-center">
                 <h2 class="mt-3">¿Que ofrecemos?</h2>
                 <p class="textoDescriptivo">Sabemos que en todo desafio que encaramos encontraremos dificultades pero
                     estaremos ahi cuando aparezcan.
@@ -138,6 +141,10 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
