Aplique correcciones de ortografia y w3c

--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Encuentra tu socio de confianza en construcción. Contacta con nosotros para proyectos personalizados. Estamos aquí para ti, donde sea que estés. ¡Construyamos juntos el futuro!">
-    <meta name="keywords" content="Concato, telefono, oficina, mail, direccion, atencio personalizada, mejores profesionales">
+    <meta name="keywords" content="Contacto, teléfono, oficina, correo, dirección, atención personalizada, mejores profesionales">
     <title>Licen - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -55,18 +55,18 @@
         <section class="justify-content-center">
 
             <div class="mt-2 mb-2">
-                <h1 class="text-center">¿Donde estamos?</h1>
+                <h1 class="text-center">¿Dónde estamos?</h1>
                 <div class="mapaInput">
                     <iframe class="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d290.57195545074416!2d-58.54266171652262!3d-34.5169165108096!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb09a7f450ee7%3A0x7f65e46b3ae926fa!2sOm%20Sal%C3%B3n%20de%20Belleza!5e0!3m2!1ses!2sar!4v1702181892516!5m2!1ses!2sar"
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">Mapa
+                        referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
             </div>
 
             <div class="mt-2 mb-2">
-                <h2 class="text-center">Dejanos tu consulta</h2>
+                <h2 class="text-center">Déjanos tu consulta</h2>
                 <div>
                     <div class="row">
                         <div class="col-lg-12" data-aos="fade-up">
@@ -74,7 +74,7 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <label for="name">Nombre y Apellido</label>
-                                        <input type="text" name="" placeholder="Juan Perez" class="form-control" id="name" required>
+                                        <input type="text" placeholder="Juan Perez" class="form-control" id="name" required>
                                     </div>
                                     <div class="col-lg-6">
                                         <label for="name">Email</label>
@@ -113,13 +113,13 @@
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
                         Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                        40.0000m2 de envergadura
+                        Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
+                        40.0000m2 de envergadura.
                     </p>
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h3>¿Donde estamos?</h3>
+                    <h3>¿Dónde estamos?</h3>
                     <h3>Calle falsa 456</h3>
                 </div>
 
@@ -141,7 +141,7 @@
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                     <div class="enlaceRedes3">
-                        <a href="#">Unete al equipo</a>
+                        <a href="#">Únete al equipo</a>
                         <a href="#">Contacto</a>
                     </div>
                 </div>
