--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora la versatilidad de nuestros proyectos de construcción. Desde residenciales hasta comerciales, damos vida a tus ideas con calidad y experiencia líder en el sector.">
-    <meta name="keywords" content="Viviendas, Hoteleria, Deportes, Gastronomia, Comercial, Proyectos, Construccion, Arquitectura">
+    <meta name="keywords" content="Viviendas, Hotelería, Deportes, Gastronomía, Comercial, Proyectos, Construcción, Arquitectura">
     <title>Licen - Proyectos</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -56,42 +56,42 @@
         <section class="row justify-content-center align-items-center">
             <h1 class="text-center mt-3">Viviendas</h1>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/P_Vivienda_UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Vivienda ph.jpg" class="imagenes" alt="Imagen de un edificio PH" loading="lazy">
+                <img src="../Imagenes/P_Vivienda_ph.jpg" class="imagenes" alt="Imagen de un edificio PH" loading="lazy">
             </div>
 
-            <h2 class="text-center">Clinicas</h2>
+            <h2 class="text-center">Clínicas</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica" loading="lazy">
+                <img src="../Imagenes/P_Clinica_1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica" loading="lazy">
+                <img src="../Imagenes/P_Clinica_2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica" loading="lazy">
             </div>
 
             <h2 class="text-center">Gastronomia</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/local gastro.jpg" class="imagenes" alt="Imagen de una local gastronomico" loading="lazy">
+                <img src="../Imagenes/P_local_gastro.jpg" class="imagenes" alt="Imagen de una local gastronomico" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/patio comidas.jpg" class="imagenes" alt="Imagen de un patio de comidas" loading="lazy">
+                <img src="../Imagenes/P_patio_comidas.jpg" class="imagenes" alt="Imagen de un patio de comidas" loading="lazy">
             </div>
 
             <h2 class="text-center">Hoteleria y entretenimiento</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
+                <img src="../Imagenes/P_Hotel_1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
+                <img src="../Imagenes/P_Hotel_2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel" loading="lazy">
             </div>
 
             <h2 class="text-center">Predios</h2>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/gym 3.jpg" class="imagenes" alt="Imagen de un gimnasio" loading="lazy">
+                <img src="../Imagenes/P_gym_3.jpg" class="imagenes" alt="Imagen de un gimnasio" loading="lazy">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Imagenes actualizdas/Entretenimiento.jpg" class="imagenes" alt="Imagen de un teatro" loading="lazy">
+                <img src="../Imagenes/P_Entretenimiento.jpg" class="imagenes" alt="Imagen de un teatro" loading="lazy">
             </div>
 
         </section>
@@ -107,14 +107,14 @@
 
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                        40.0000m2 de envergadura
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superamos las 20 personas.
+                        Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
+                        40,000 m2 de envergadura.
                     </p>
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h3>¿Donde estamos?</h3>
+                    <h3>¿Dónde estamos?</h3>
                     <h3>Calle falsa 456</h3>
                 </div>
                 
@@ -137,7 +137,7 @@
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                     <div class="enlaceRedes3">
-                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Únete al equipo</a>
                         <a href="./Contacto.html">Contacto</a>
                     </div>
                 </div>
