--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Transformamos visiones en realidad. Nuestra constructora ofrece servicios diversos con una filosofía de excelencia. Descubre cómo hacemos de cada proyecto una obra maestra">
-    <meta name="keywords" content="Diseño, Arquitectura, Iluminacion, Interiorismo, Grafica, Proyetos">
+    <meta name="description"
+        content="Transformamos visiones en realidad. Nuestra constructora ofrece servicios diversos con una filosofía de excelencia. Descubre cómo hacemos de cada proyecto una obra maestra">
+    <meta name="keywords" content="Diseño, Arquitectura, Iluminación, Interiorismo, Gráfica, Proyectos">
     <title>Licen - Servicios</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,91 +19,97 @@
 
     <header>
         <section>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
-                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="row justify-content-center">
-                        <ul class="nav-menu me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./SobreNosotros.html">Sobre Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Proyectos.html">Proyectos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Contacto.html">Contacto</a>
-                            </li>
-                        </ul>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg"
+                            alt="Logo Desarrollos Licen"></a>
+                    <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="row justify-content-center">
+                            <ul class="nav-menu me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./SobreNosotros.html">Sobre
+                                        Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Proyectos.html">Proyectos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </section>
+            </nav>
+        </section>
     </header>
 
     <main>
         <section class="row align-items-center">
-            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50"
+                class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h1>Diseño Arquitectónico</h1>
                 <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
-                    proyecto arquitectonico que
-                    cumpla con todas las necesidades de funcionalidad teniendo en cuenta los usos de los ambientes, las
-                    circulaciones, los espacios privados y los espacios publico sin perder el foco en la necesidad
-                    especfica de los usuarios.
+                    proyecto arquitectónico que cumpla con todas las necesidades de funcionalidad, teniendo en cuenta
+                    los usos de los ambientes, las circulaciones, los espacios privados y los espacios públicos sin
+                    perder el foco en la necesidad específica de los usuarios.
                 </p>
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura" loading="lazy">
+                <img src="../Imagenes/S_Diseño_Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura"
+                    loading="lazy">
             </div>
 
-            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+            <div data-aos="fade-right" data-aos-delay="50"
+                class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
                 <h2>Proyecto de Iluminación</h2>
-                <p class="textoDescriptivo">Trabajamos en equipo con estudios de iluminacion especificos para cada
-                    proyecto brindando el detalle
-                    estetico como tambien dando la correcta iluminacion a cada ambiente para dar el mejor resultado de
-                    confort para los usuarios.</p>
+                <p class="textoDescriptivo">Trabajamos en equipo con estudios de iluminación específicos para cada
+                    proyecto, brindando el detalle estético, así como también proporcionando la correcta iluminación a
+                    cada ambiente para dar el mejor resultado de confort para los usuarios.</p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Proyecto de iluminacion.jpg" class="imagenes" alt="Render de ilumninacion" loading="lazy">
+                <img src="../Imagenes/S_Proyecto_de_iluminacion.jpg" class="imagenes" alt="Render de ilumninacion"
+                    loading="lazy">
             </div>
 
-            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
-                <h2>Decoracion y estilo</h2>
-                <p class="textoDescriptivo">Parte de nuestro staff se dedica exclusivamente a aportar ideas moderanas y
-                    decorativas en conjunto
-                    con el estudio de iluminacion para darnos los detalles de materialidades, artefactos, equipamientos
-                    y adornos. Dando como resultado un exclente combinacion entre la arquitectura, la iluminacion y el
-                    diseño interior para cada ambiente.
+            <div data-aos="fade-right" data-aos-delay="50"
+                class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+                <h2>Decoración y estilo</h2>
+                <p class="textoDescriptivo">Parte de nuestro staff se dedica exclusivamente a aportar ideas modernas y
+                    decorativas en conjunto con el estudio de iluminación para darnos los detalles de materialidades,
+                    artefactos, equipamientos y adornos. Dando como resultado una excelente combinación entre la
+                    arquitectura, la iluminación y el diseño interior para cada ambiente.
                 </p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Diseño Interior.jpg" class="imagenes" alt="Render de Diseño de interiores" loading="lazy">
+                <img src="../Imagenes/S_Diseño_Interior.jpg" class="imagenes" alt="Render de Diseño de interiores"
+                    loading="lazy">
             </div>
 
-            <div data-aos="fade-right" data-aos-delay="50" class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
-                <h2>Diseño grafico y señaletica</h2>
-                <p class="textoDescriptivo">Muchos de nuestros proyectos requieren un aporte desde el diseño grafico.
-                    Esta parte del diseño no
-                    suele estar muy involucrada en la arquitectura pero mpara nuestro equipo es un elemento fundamental
-                    para la trasabilidad de los usuarios por los ambientes realizados. Generando una armonioa
-                    circulacion y apreciacion de los espacios, dando un efecto satisfactorio en el uso de los espacios y
-                    los edificios de gran envergadura.
+            <div data-aos="fade-right" data-aos-delay="50"
+                class="col-lg-6 text-center mt-2 mb-2 center-block textoDescriptivo">
+                <h2>Diseño gráfico y señalética</h2>
+                <p class="textoDescriptivo">Muchos de nuestros proyectos requieren un aporte desde el diseño gráfico.
+                    Esta parte del diseño no suele estar muy involucrada en la arquitectura, pero para nuestro equipo es
+                    un elemento fundamental para la trazabilidad de los usuarios por los ambientes realizados. Generando
+                    una armonía, circulación y apreciación de los espacios, dando un efecto satisfactorio en el uso de
+                    los espacios y los edificios de gran envergadura.
                 </p>
             </div>
             <div class="col-lg-6 text-center mt-2 mb-2">
-                <img src="../Imagenes/Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica" loading="lazy">
+                <img src="../Imagenes/S_Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica"
+                    loading="lazy">
             </div>
 
         </section>
@@ -118,14 +125,14 @@
 
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                        40.0000m2 de envergadura
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superamos las 20 personas.
+                        Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
+                        40,000 m2 de envergadura.
                     </p>
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h3>¿Donde estamos?</h3>
+                    <h3>¿Dónde estamos?</h3>
                     <h3>Calle falsa 456</h3>
                 </div>
 
@@ -147,7 +154,7 @@
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                     <div class="enlaceRedes3">
-                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Únete al equipo</a>
                         <a href="./Contacto.html">Contacto</a>
                     </div>
                 </div>
@@ -164,7 +171,7 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
 </body>
 
