--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Constructora en ascenso: Superamos desafíos desde el inicio. ¡Descubre nuestra pasión por la construcción de un futuro sólido y prometedor!">
-    <meta name="keywords" content="Conocenos, Nosotros, Unite al equipo">
+    <meta name="description"
+        content="Constructora en ascenso: Superamos desafíos desde el inicio. ¡Descubre nuestra pasión por la construcción de un futuro sólido y prometedor!">
+    <meta name="keywords" content="Conócenos, Nosotros, Únete al equipo">
     <title>Licen - Sobre Nosotros</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,71 +19,69 @@
 
     <header>
         <section>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo Desarrollos Licen"></a>
-                <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="row justify-content-center">
-                        <ul class="nav-menu me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Sobre Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Proyectos.html">Proyectos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Servicios.html">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Contacto.html">Contacto</a>
-                            </li>
-                        </ul>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img class="logoLicen" src="../Imagenes/Logo.jpg"
+                            alt="Logo Desarrollos Licen"></a>
+                    <button class="navbar-toggler hambToggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="row justify-content-center">
+                            <ul class="nav-menu me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">Sobre Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Proyectos.html">Proyectos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </section>
+            </nav>
+        </section>
     </header>
 
     <main class="cuerpoSobreNosotros">
         <section class="row">
-            <div data-aos="fade-right" data-aos-delay="50" class="justify-content-center align-items-center text-center">
-                <h1 class="text-center mt-3">¿Quienes Somos?</h1>
+            <div data-aos="fade-right" data-aos-delay="50"
+                class="justify-content-center align-items-center text-center">
+                <h1 class="text-center mt-3">¿Quiénes Somos?</h1>
                 <p class="textoDescriptivo">Somos un equipo compuesto enteramente por profesionales especializados en el
-                    desarrollo de proyectos
-                    y ejecución de obras. Nuestro departamento de Arquitectura posee una vasta experiencia en el diseño
+                    desarrollo de proyectos y ejecución de obras. Nuestro departamento de Arquitectura posee una vasta
+                    experiencia en el diseño
                     y planificación de viviendas unifamiliares, multifamiliares, oficinas, predios deportivos, locales
-                    gastronomicos y hoteleria tanto en la Ciudad de Buenos Aires como en la Provincia de Buenos Aires.
+                    gastronómicos y hotelería tanto en la Ciudad de Buenos Aires como en la Provincia de Buenos Aires.
                     Nuestra gran trayectoria en el área del diseño y la construcción permite obtener resultados
-                    funcionales,
-                    creativos y de alta calidad.</p>
+                    funcionales, creativos y de alta calidad.</p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <img class="d-block w-100" src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen" loading="lazy">
+                <img class="d-block w-100" src="../Imagenes/SN_Trabajo_en_equipo.jpg"
+                    alt="Imagen representativa de Licen" loading="lazy">
             </div>
             <div data-aos="fade-left" data-aos-delay="50" class="justify-content-center align-items-center text-center">
-                <h2 class="mt-3">¿Que ofrecemos?</h2>
-                <p class="textoDescriptivo">Sabemos que en todo desafio que encaramos encontraremos dificultades pero
-                    estaremos ahi cuando aparezcan.
-                    Traajando codo a codo para hacer de cada proyecto una obra unica.Trabajamos integralmente todas
-                    nuestras
-                    obras,
-                    involucrándonos para asegurar el mejor resultado, ofrecemos una solución “Llave en mano”. Daremos
-                    una
-                    respuesta
-                    integral a las necesidades, estudiando el diseño arquitectonico, los detalles esteticos y de
-                    decoracion,
+                <h2 class="mt-3">¿Qué ofrecemos?</h2>
+                <p class="textoDescriptivo">Sabemos que en todo desafío que encaramos encontraremos dificultades pero estaremos ahí cuando aparezcan.
+                    Trabajando codo a codo para hacer de cada proyecto una obra única. Trabajamos integralmente todas nuestras
+                    obras, involucrándonos para asegurar el mejor resultado, ofrecemos una solución “Llave en mano”. Damos
+                    una respuesta
+                    integral a las necesidades, estudiando el diseño arquitectónico, los detalles estéticos y de
+                    decoración,
                     el efecto
-                    y la importancia de la iluminacion natural y artificail y el diseño grafico y señaletica cuando el
-                    proyecto lo requiera</p>
+                    y la importancia de la iluminación natural y artificial y el diseño gráfico y señalética cuando el
+                    proyecto lo requiera.</p>
             </div>
         </section>
     </main>
@@ -97,14 +96,14 @@
 
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                        40.0000m2 de envergadura
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superamos las 20 personas.
+                        Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
+                        40,000 m2 de envergadura
                     </p>
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h3>¿Donde estamos?</h3>
+                    <h3>¿Dónde estamos?</h3>
                     <h3>Calle falsa 456</h3>
                 </div>
 
@@ -126,7 +125,7 @@
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                     <div class="enlaceRedes3">
-                        <a href="./Contacto.html">Unete al equipo</a>
+                        <a href="./Contacto.html">Únete al equipo</a>
                         <a href="./Contacto.html">Contacto</a>
                     </div>
                 </div>
@@ -143,7 +142,7 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
 </body>
 
