--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nuestro compromiso es brindar resultados superiores y establecer relaciones duraderas. Innovación constante, excelencia en calidad, eficiencia operativa y compromiso">
-    <meta name="keywords" content="Desarrolos inmobiliarios, Construccion, Proyectos, Vivienda, Arquitectura ">
+    <meta name="keywords" content="Desarrollos inmobiliarios, Construcción, Proyectos, Vivienda, Arquitectura ">
     <title>Desarrollos Licen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -61,7 +61,7 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./Imagenes/Index_Desarrollos_ _Inmobiliarios _render.jpg" class="d-block w-100"
+                        <img src="./Imagenes/Index_Desarrollos_Inmobiliarios _render.jpg" class="d-block w-100"
                             alt="Render de una ciudad">
                     </div>
                     <div class="carousel-item">
@@ -100,13 +100,13 @@
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
                         Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
-                        40.0000m2 de envergadura
+                        Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
+                        40.0000m2 de envergadura.
                     </p>
                 </div>
 
                 <div class="col-lg-2 text-center infoAdicional">
-                    <h3>¿Donde estamos?</h3>
+                    <h3>¿Dónde estamos?</h3>
                     <h3>Calle falsa 456</h3>
                 </div>
 
@@ -128,7 +128,7 @@
 
                 <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                     <div class="enlaceRedes3">
-                        <a href="./Paginas/Contacto.html">Unete al equipo</a>
+                        <a href="./Paginas/Contacto.html">Únete al equipo</a>
                         <a href="./Paginas/Contacto.html">Contacto</a>
                     </div>
                 </div>
