mas detalles de orto

--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -96,9 +96,9 @@
 
                 <div class="col-lg-4 text-center textoPiePaginas">
                     <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                        Iniciando con tres personas en el equipo y al cabo de pocos años superamos las 20 personas.
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
                         Desarrollamos proyectos de diferentes tipologías y dimensiones alcanzando proyectos de
-                        40,000 m2 de envergadura
+                        40.0000m2 de envergadura.
                     </p>
                 </div>
 
